# puzzledesk

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
data/: SOURCES.md  cw_10.txt  cw_11.txt  cw_12.txt  cw_13.txt  cw_14.txt  cw_15.txt  cw_2.txt  cw_3.txt  cw_4.txt  cw_5.txt  cw_6.txt  cw_7.txt  cw_8.txt  cw_9.txt  scored_10.txt  scored_11.txt  scored_12.txt  scored_13.txt  scored_14.txt  scored_15.txt  scored_2.txt  scored_3.txt  scored_4.txt  scored_5.txt  scored_6.txt  scored_7.txt  scored_8.txt  scored_9.txt  words_11.txt  words_12.txt  words_8.txt  words_9.txt
docs/: architecture.md  decisions.md  lesson-length-ceiling.md  notes.md  open-questions.md  postmortem-kernel-methods.md  relational-difficulty.md  roadmap.md
scripts/: bench.py  blackcells.py  ceiling.py  compare.py  count.py  demo.py  difficulty.py  endogenous.py  frontier.py  gen_cw.py  gen_scored.py  gen_words.py  generate.py  gibbs.py  largemini.py  mini.py  puzzle.py  quality.py  relational.py  samplers.py  scan.py  solve.py  solve_effort.py  spike_probe.py  spine.py
site/: README.md  blocked-asym.html  blocked.html  build_endogenous.py  build_flagship.py  build_latent_cross.py  build_latent_long.py  build_latent_two.py  endogenous.html  field.html  generate_puzzles.py  index.html  keystone.html  latent-cross.html  latent-long.html  latent-two.html  latent.html  midi-asym.html  midi-long.html  midi.html  mini.html  preview.cjs  puzzles.json  render_pages.py  saturday-mini.html
src/puzzledesk/: __init__.py  backtrack.py  blocked.py  bruteforce.py  fill.py  lexicon.py  patterns.py  sampler.py  square.py  validate.py
src/puzzledesk/adapters/: __init__.py  claude_clue.py  claude_solver.py  file_lexicon.py  memory_repository.py  numpy_rng.py  probe.py  writer.py
src/puzzledesk/app/: __init__.py  blocked.py  clue.py  cluing.py  difficulty.py  generate.py  mini.py  ports.py  puzzle.py  puzzle_service.py  repository.py  results.py  solve.py  solve_service.py  solver.py  spec.py
src/puzzledesk/bootstrap/: __init__.py  build.py  config.py  container.py
src/puzzledesk/cli/: __init__.py  generate.py  mini.py  present.py  puzzle.py  solve.py
src/puzzledesk/core/: __init__.py  blocked.py  lexicon.py  probe.py  rng.py  square.py  validate.py
src/puzzledesk/core/engines/: __init__.py  backtrack.py  bruteforce.py  fill.py  gibbs_layout.py  patterns.py  sampler.py
src/puzzledesk/web/: __init__.py  app.py  main.py  schema.py
tests/: fakes.py  test_blocked_service.py  test_claude_clue.py  test_claude_solver.py  test_clue.py  test_cluing.py  test_count.py  test_difficulty.py  test_gibbs_layout.py  test_ground_truth.py  test_invariants.py  test_patterns.py  test_present.py  test_probe.py  test_probe_adapters.py  test_puzzle_service.py  test_repository.py  test_rng_port.py  test_services.py  test_solve.py  test_solve_service.py  test_web.py  test_writer.py
