[project]
name = "puzzledesk"
version = "0.1.0"
description = "Dense crossword (double word square) generation — NYT-mini style."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "jml-89" }]
dependencies = [
    # 2.1 is the first numpy with cp313 wheels, so it is the true floor under
    # requires-python >=3.13 (D33); <2.1 simply won't install. Locked at 2.5.x.
    "numpy>=2.1",
]

[project.optional-dependencies]
# Only needed to (re)generate data/scored_N.txt; the solvers read the files, not
# wordfreq itself (see scripts/gen_scored.py).
scoring = ["wordfreq>=3.0"]
# Only needed for live clue generation (the ClaudeClueProvider adapter) and the
# solver probe. The grid generator has zero LLM dependency; the SDK is imported
# lazily and resolves the API key from the environment. `uv sync --extra clue`.
# Floor is 0.116 (the locked, known-good line): the adapters use `output_config`
# structured output and adaptive-thinking `effort` (D16/D26), which predate no
# 0.40-era SDK -- an old resolve would crash on the first live call, not at import.
clue = ["anthropic>=0.116"]
# Only needed to serve the HTTP API (the `puzzledesk.web` layer, D34/roadmap Phase 1).
# The engines, the CLIs, and the whole gate run without it -- FastAPI/Pydantic are
# imported only under `puzzledesk.web.*`, isolated exactly like `anthropic` behind
# `clue`. `uv sync --extra web` + `uv run --extra web uvicorn puzzledesk.web.main:app`.
web = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
]

[project.scripts]
# Console entry points for the tools (the front). `uv run mini 5 70 3` works
# alongside the documented `uv run scripts/mini.py 5 70 3` shim.
mini = "puzzledesk.cli.mini:main"
generate = "puzzledesk.cli.generate:main"
puzzle = "puzzledesk.cli.puzzle:main"
solve = "puzzledesk.cli.solve:main"

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "import-linter>=2.0",
    # HTTP client used only by FastAPI's TestClient (tests/test_web.py). Test
    # infrastructure, so it lives in the dev group, not the runtime `web` extra --
    # uvicorn serves the app without it.
    "httpx>=0.27",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/puzzledesk"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "scripts"]
# site/ is committed presentation artifacts (rendered HTML + their build scripts),
# explicitly "outside src/ and the lint/type scope" per site/README.md. mypy already
# scopes to src/puzzledesk; this makes ruff honour the same documented boundary
# (the scripts use dict()-literals and loose annotations by design).
extend-exclude = ["site"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "ANN",  # flake8-annotations (drive type-hint coverage)
    "TID",  # flake8-tidy-imports (ban relative imports -- absolute only)
    "RUF",  # ruff-specific
    # Modern-Python idiom detectors (D-entry pending). Each of these flagged *zero*
    # existing violations when added -- they are a ratchet that locks the current
    # style in, not a backlog. Deliberately NOT added: TC (104 hits, pure churn --
    # `from __future__ import annotations` already makes every annotation a string,
    # so hoisting typing-only imports into `TYPE_CHECKING` buys ~nothing here) and
    # TRY003/FBT (opinionated).
    "FURB",  # refurb: modern-idiom rewrites (the headline "modern Python" set)
    "FA",    # flake8-future-annotations: keep `from __future__ import annotations`
    "RET",   # flake8-return: unnecessary else/assign-before-return
    "PIE",   # flake8-pie: misc modern simplifications
    "PTH",   # flake8-use-pathlib: os.path -> pathlib (reinforces the no-os fence)
    "SLOT",  # require __slots__ on the right base classes
    "ISC",   # flake8-implicit-str-concat: catch accidental string concatenation
    "LOG",   # flake8-logging: logging-call correctness
    "G",     # flake8-logging-format: no f-strings/%-in-logging pitfalls
    "PERF",  # Perflint: loops that should be comprehensions, etc.
    "PLC", "PLE", "PLW",  # Pylint convention/error/warning
    # -- the size/complexity RATCHET (D44). See the mccabe/pylint tables below for the
    # thresholds and the ratchet policy; these catch a function *growing* past today's
    # worst. --
    "C901",     # mccabe cyclomatic complexity
    "PLR0911",  # too many return statements
    "PLR0912",  # too many branches
    "PLR0913",  # too many arguments
    "PLR0915",  # too many statements
]
ignore = [
    "ANN401",  # allow explicit typing.Any where genuinely needed
]

# The size/complexity thresholds are a TIGHTENING RATCHET (D44), not a fixed bar.
#
#   * Each `max-*` below is set at (or, where the tree is already clean, below) the
#     *current worst* function in `src/`, so the gate is green today but nothing may
#     regress past it. `max-args`/`max-branches`/`max-complexity` sit at the ceiling set
#     by a few known-inherent hotspots (the backtracking search recursions in
#     core/engines, and the CLI argv-glue in cli/generate.py -- code where the number is
#     essential, not soup). `max-returns`/`max-statements` have *zero* current violations,
#     so they sit at ruff's strict defaults -- real bars, not ceilings.
#   * The numbers may only ever be LOWERED, never raised. Lower one whenever a hotspot is
#     refactored below it (the D41-D43 parameter-object work is what moved `max-args` from
#     15 down to 10). Raising a threshold is a deliberate decision with a reason (a D-entry
#     if it reshapes anything), never a drive-by to make a new offender pass.
#   * A NEW violation is a design signal, not "the rule is too strict": bundle the
#     parameters into a value object (the CapSpec/SearchBudget/FieldParams convention,
#     D41-D43), or split the function. Do not `# noqa` it -- CLAUDE.md's no-noqa rule holds
#     here too; if a genuinely-inherent function must exceed a bar, that is a config change
#     with a written reason, visible to everyone, not a scattered suppression.
[tool.ruff.lint.mccabe]
max-complexity = 19  # ceiling: patterns.gen_capped's cap-driven backtracking recursion

[tool.ruff.lint.pylint]
max-args = 10  # ceiling: cli/generate._run_capped, patterns.fill_by_count, gibbs.fill_gibbs
max-branches = 15  # ceiling: the fill/layout backtracking `rec` inner loops
max-returns = 6  # ruff default -- no current violation, a real bar
max-statements = 50  # ruff default -- no current violation, a real bar

# Imports are absolute (`puzzledesk.*`), never relative -- enforced, not a
# convention. Ruff enforces the *spelling* of an import (this rule); import-linter
# enforces the *architecture* (which layer may import which). `all` bans both `.`
# (same-package) and `..` (parent) forms; `TID252` is auto-fixable.
[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
# Scripts are small experiment/benchmark drivers; don't require annotating the
# throwaway `__main__` argv-parsing blocks.
"scripts/*.py" = ["ANN"]
# Tests: don't force annotations on every fixture/helper; they are not the API.
"tests/*.py" = ["ANN"]
# The `anthropic` SDK is an optional extra (the `clue` extra); these adapters import
# it *lazily inside the method* so the package imports without it (see CLAUDE.md
# "`anthropic` is optional"). That deferred import is the intended design, not a
# smell -- exempt just these two files from the top-level-import rule.
"src/puzzledesk/adapters/claude_clue.py" = ["PLC0415"]
"src/puzzledesk/adapters/claude_solver.py" = ["PLC0415"]

[tool.mypy]
files = ["src/puzzledesk"]
python_version = "3.13"
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true

[[tool.mypy.overrides]]
# Optional-extra libraries: not installed in the base gate env (`uv run mypy` runs
# without an extra), so mypy cannot see their stubs. Treat their imports as `Any`,
# exactly as for `anthropic` behind `clue`. `wordfreq`/`anthropic` back the scoring/
# clue extras; `fastapi`/`uvicorn`/`starlette`/`pydantic` back the `web` extra.
module = ["wordfreq", "anthropic", "fastapi", "uvicorn", "starlette", "pydantic"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

# import-linter: enforce the hexagonal layering. The stack is linear -- a layer
# may import any layer below it, never one above -- so the whole architecture is
# one `layers` contract. This is what makes "the kernel stays pure" and "app does
# not depend on a concrete adapter" structural facts, not review conventions.
[tool.importlinter]
root_package = "puzzledesk"
include_external_packages = true  # so the forbidden contract can name stdlib OS modules

[[tool.importlinter.contracts]]
name = "Hexagonal layers (core < app < adapters < bootstrap < cli)"
type = "layers"
containers = ["puzzledesk"]
layers = [
    "web",        # HTTP entry point (top, D34): beside cli, over the same container
    "cli",        # thin entry points: may import everything below
    "bootstrap",  # composition root: wires adapters into services
    "adapters",   # infrastructure: implements the ports (above app on purpose)
    "app",        # use-case services + the ports; must NOT reach into adapters
    "core",       # the pure kernel (bottom): imports nothing above it
]

# OS reach is confined to the edges. The pure layers (core, app) are pure functions
# over their inputs, so they must not import the operating system directly -- the
# environment is grabbed once in `bootstrap` (the composition root), the filesystem
# read lives in a `FileLexicon` adapter, and streams are resolved at wiring time.
# This bans the import at compile time; it does not stop a determined adapter or a
# runtime reflection trick, and `adapters`/`bootstrap`/`cli` are exempt by design --
# it is a nice-start fence that keeps the kernel honest, not a sandbox. See D18.
[[tool.importlinter.contracts]]
name = "The pure layers (core, app) never reach the OS"
type = "forbidden"
source_modules = [
    "puzzledesk.core",
    "puzzledesk.app",
]
forbidden_modules = [
    "os",
    "io",
    "sys",
    "subprocess",
    "socket",
]
